@@ -14,7 +14,10 @@ K = [ 1, 2, 3, [2,1], [3,1], (x,y)->sign(x[1] - y[1]) ];
            E, print(E))
   )
 }
-vecsort(Vecsmall([4,3,2,1]))
+T=vecsort(Vecsmall([4,3,2,1]))
+vecsearch(T,-1)
+vecsearch(T,5)
+vecsearch(T,3)
 vecsort(List([4,3,2,1]))
 v=[4,3,4,1,4,2,3];
 vecsort(v,, 8)
@@ -22,3 +25,7 @@ vecsort(v,, 8+1)
 vecsort(v,, 8+4)
 vecsort(v,, 8+4+1)
 vecsort(List(),,4)
+
+\\Errors
+vecsearch(Vecsmall(1),1,1)
+vecsort(Vecsmall(1),1)
