@@ -46,6 +46,8 @@ BA   10- [libpari] Flx_digits/FlxV_Flx_fromdigits
      13- new GP function nfeltsign
 HC   14- new GP functions sumnumap, sumnumapinit (Abel-Plana summation)
 HC   15- new GP functions zetamultall, zetamultconvert
+     16- allow t_VECSMALL for vecsort [already there but undocumented] and
+         vecsearch [already there but prevented by a typo]
 
   Changed
       1- rewrite bnfnarrow
